add controller and simple html templates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.thymeleaf.mode=LEGACYHTML5
+
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:postgresql://localhost:5432/diary_database
 spring.datasource.username=sebastian
